<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/monday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/thursday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/friday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/saturday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sunday"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:contextClickable="true"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        tools:ignore="RtlCompat"
        tools:targetApi="m"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:buttonTint="@color/navy"/>

</LinearLayout>